chore: configurando deploy automático para Azure